# maser4py

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  INSTALL.rst  MANIFEST.in  README.md  README.rst  TODO.txt  __main__.py  bump_version.py  code_of_conduct_maser4py.md  code_of_conduct_maser4py.txt  conftest.py  files.txt  generate_setup.py  pyproject.toml  requirements.txt  setup.py
.ci/: zenodo.py  (+2 more)
src/maser_cdf/: pyproject.toml
src/maser_cdf/maser/cdf/: __init__.py  install.py  tools.py
src/maser_cdf/maser/cdf/cdfcompare/: __init__.py  cdf_compare.py  subparser.py
src/maser_cdf/maser/cdf/serializer/: __init__.py  exceptions.py  globals.py  skeleton.py  skeletoncdf.py  skeletontable.py  txt.py  xlsx.py
src/maser_cdf/maser/cdf/validator/: __init__.py  subparser.py  validator.py
src/maser_das2/: pyproject.toml
src/maser_das2/maser/das2/: reader.py
src/maser_das2/src/maser/das2/: reader.py
src/maser_data/: README.md  pyproject.toml
src/maser_data/maser/data/: __init__.py  sweep.py
src/maser_data/maser/data/base/: __init__.py  base.py  cdf_fill.py  class_factory.py  dataset_filename_regex.json  mixins.py  sweeps.py
src/maser_data/maser/data/cdpp/: __init__.py
src/maser_data/maser/data/cdpp/interball/: __init__.py  data.py  records.py  sweeps.py
src/maser_data/maser/data/cdpp/stereo/: __init__.py  data.py  sweeps.py
src/maser_data/maser/data/cdpp/viking/: data.py
src/maser_data/maser/data/cdpp/wind/: data.py  sweeps.py
src/maser_data/maser/data/ecallisto/: __init__.py  data.py
src/maser_data/maser/data/nancay/: __init__.py
src/maser_data/maser/data/nancay/nda/: data.py  sweeps.py
src/maser_data/maser/data/nancay/nenufar/: data.py
src/maser_data/maser/data/padc/: __init__.py
src/maser_data/maser/data/padc/bepi/: __init__.py
src/maser_data/maser/data/padc/bepi/sorbet/: __init__.py  data.py
src/maser_data/maser/data/padc/cassini/: __init__.py  data.py  kronos.py  kronos_level_format.json
src/maser_data/maser/data/padc/expres/: __init__.py  data.py  sweeps.py
src/maser_data/maser/data/padc/juno/: data.py
src/maser_data/maser/data/padc/solo/rpw/: data.py  hfr.py  lfr.py  tnr.py  tnr_filter.py
src/maser_data/maser/data/padc/stereo/: data.py
src/maser_data/maser/data/padc/wind/: __init__.py  data.py  sweeps.py
src/maser_data/maser/data/pds/: __init__.py  data.py  utils.py
src/maser_data/maser/data/pds/co/: __init__.py
src/maser_data/maser/data/pds/labels/: __init__.py
src/maser_data/maser/data/pds/vg/: __init__.py  data.py  sweeps.py
src/maser_data/maser/data/psa/: __init__.py
src/maser_data/maser/data/psa/labels/: __init__.py
src/maser_data/maser/data/psa/labels/MEX-M-MARSIS-3-RDR-AIS-V1.0/: AIS_FORMAT.FMT
src/maser_data/maser/data/psa/mex/: __init__.py  data.py
src/maser_data/maser/data/rpw/: __init__.py  hfr.py  lfr.py  plot_mean.py  quick_look_tnr_lfr_corrections.py  tnr.py  tnr_filter.py
src/maser_data/maser/data/sorbet/: data.py
src/maser_data/src/maser/data/: __init__.py
src/maser_data/src/maser/data/base/: __init__.py  base.py  class_factory.py  mixins.py  records.py  sweeps.py
src/maser_data/src/maser/data/cdpp/: __init__.py  ccsds.py  const.py  utils.py
src/maser_data/src/maser/data/cdpp/interball/: __init__.py  data.py  records.py  sweeps.py
src/maser_data/src/maser/data/cdpp/stereo/: __init__.py  data.py  sweeps.py
src/maser_data/src/maser/data/cdpp/viking/: __init__.py  data.py  records.py
src/maser_data/src/maser/data/cdpp/wind/: __init__.py  data.py  records.py  sweeps.py
src/maser_data/src/maser/data/ecallisto/: data.py
src/maser_data/src/maser/data/nancay/: __init__.py
src/maser_data/src/maser/data/padc/: __init__.py
src/maser_data/src/maser/data/pds/: __init__.py  data.py  utils.py
src/maser_data/src/maser/data/psa/: __init__.py
src/maser_data/src/maser/data/radiojove/: data.py
src/maser_plot/: README.md  pyproject.toml
src/maser_plot/maser/plot/: __init__.py
src/maser_plot/maser/plot/base/: base.py
src/maser_plot/maser/plot/cdpp/interball/: __init__.py  plot.py
src/maser_plot/maser/plot/cdpp/viking/: __init__.py
src/maser_plot/maser/plot/cdpp/wind/: __init__.py
src/maser_plot/maser/plot/ecallisto/: plot.py
src/maser_plot/maser/plot/nancay/nenufar/: plot.py
src/maser_plot/maser/plot/padc/: __init__.py
src/maser_plot/maser/plot/padc/expres/: plot.py
src/maser_plot/maser/plot/padc/juno/: __init__.py  plot.py
src/maser_plot/maser/plot/padc/stereo/: __init__.py  plot.py
src/maser_plot/maser/plot/padc/wind/: plot.py
src/maser_plot/maser/plot/pds/: plot.py
src/maser_plot/maser/plot/pds/vg/: plot.py
src/maser_plot/maser/plot/psa/mex/: plot.py
src/maser_plot/maser/plot/rpw/: __init__.py  lfr.py  plot.py  plot_mean.py  quick_look.py  quick_look_tnr_lfr.py  tnr.py
src/maser_plot/src/maser/plot/base/: __init__.py  base.py
src/maser_plot/src/maser/plot/cdpp/: __init__.py
src/maser_plot/src/maser/plot/ecallisto/: __init__.py
src/maser_plot/src/maser/plot/nancay/: __init__.py
src/maser_plot/src/maser/plot/pds/: __init__.py  plot.py
src/maser_plot/src/maser/plot/psa/: __init__.py
src/maser_plot/src/maser/plot/rpw/: cross_section.py  lfr.py  plot_mean.py  quick_look.py  tnr.py
src/maser_time/: pyproject.toml
src/maser_time/maser/time/: __init__.py  const.py  leapsec.py  subparser.py  time.py
src/maser_tools/: README.md  pyproject.toml
src/maser_tools/maser/tools/: settings.py
src/maser_tools/maser/tools/cdf/: install.py
src/maser_tools/maser/tools/cdf/serializer/: __init__.py  globals.py  skeletoncdf.py  skeletontable.py  subparser.py  txt.py  xlsx.py
src/maser_tools/maser/tools/cdf/validator/: __init__.py  subparser.py
src/maser_tools/maser/tools/support/cdf/: converter_example.xlsx  skeleton.skt-tpl
src/maser_tools/maser/tools/time/: leapsec.py  subparser.py  test_time.py
src/maser_tools/src/maser/tools/: __init__.py
src/maser_tools/src/maser/tools/cdf/: install.py  tools.py
src/maser_tools/src/maser/tools/time/: leapsec.py  subparser.py
(+525 files in other folders)
