[tool.poetry]
name = "maser.data"
version = "0.1.0"
description = ""
authors = ["Baptiste Cecconi <baptiste.cecconi@obspm.fr>"]
license = "CeCILL"
[[tool.poetry.packages]]
include = "maser"


[tool.poetry.dependencies]
python = ">=3.8,<4"
spacepy = {version = "^0.3.0", optional = true}
astropy = "^5.0.4"
nenupy = {version = "^2.1.0", optional = true}
xarray = "^2022.3.0"
jupyter = {version = "^1.0.0", optional = true}
jupytext = {version = "^1.13.8", optional = true}

[tool.poetry.extras]
jupyter = ["jupyter", "jupytext"]
nenupy = ["nenupy"]
spacepy = ["spacepy"]
all = ["jupyter", "jupytext", "nenupy"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
requests = "^2.27.1"
poetry2setup = "^1.0.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
markers = [
    "test_data_required: mark tests that require downloading test data",
    "nenupy_required: mark tests that require the nenupy package",
    "spacepy_required: mark tests that require the spacepy package",
]

[tool.jupytext]
formats = "ipynb,py:percent"
# remove notebooks metadata from scripts
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.masonry.api"
