[tool.poetry]
name = "maser.cdf"
version = "0.1.0"
description = ""
authors = ["MASER Team"]
license = "CeCILL"

# handle namespace with poetry
packages = [
    { include = "maser" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
spacepy = "^0.3.0"

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.masonry.api"
