[tool.poetry]
name = "maser.data"
version = "0.1.0"
description = ""
authors = ["Baptiste Cecconi <baptiste.cecconi@obspm.fr>", "Sonny Lion <sonny.lion@obspm.fr>"]
license = "CeCILL"

# handle namespace with poetry
packages = [
    { include = "maser" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
spacepy = {version = "^0.3.0", optional = true}
astropy = "^5.0.4"
nenupy = {version = "^2.1.0", optional = true}
xarray = "^2022.3.0"
jupyter = {version = "^1.0.0", optional = true}
jupytext = {version = "^1.13.8", optional = true}

[tool.poetry.extras]
jupyter = ["jupyter", "jupytext"]
nenupy = ["nenupy"]
spacepy = ["spacepy"]
all = ["jupyter", "jupytext", "nenupy", "spacepy"]

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
