[tool.poetry]
name = "maser-data"
version = "0.3.2"
description = "Maser4py submodule to handle radio data"
readme = "README.md"
authors = ["Baptiste Cecconi <baptiste.cecconi@obspm.fr>", "Sonny Lion <sonny.lion@obspm.fr>", "Xavier Bonnin <xavier.bonnin@obspm.fr>"]
license = "CeCILL"

# handle namespace with poetry
packages = [
    { include = "maser" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
spacepy = {version = "^0.4.0", optional = true}
numpy = "^1.23.0"
astropy = "^5.0.4"
nenupy = {version = "^2.1.0", optional = true}
xarray = "^2022.3.0"
jupyter = {version = "^1.0.0", optional = true}
jupytext = {version = "^1.13.8", optional = true}

[tool.poetry.extras]
jupyter = ["jupyter", "jupytext"]
nenupy = ["nenupy"]
spacepy = ["spacepy"]
all = ["jupyter", "jupytext", "nenupy", "spacepy"]

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
