[tool.poetry]
name = "maser-data"
version = "0.5.1"
description = "Maser4py submodule to handle radio data"
readme = "README.md"
authors = ["Baptiste Cecconi <baptiste.cecconi@obspm.fr>", "Lucas Grosset <lucas.grosset@obspm.fr>", "Sonny Lion <sonny.lion@obspm.fr>", "Xavier Bonnin <xavier.bonnin@obspm.fr>"]
license = "CeCILL-B"

# handle namespace with poetry
packages = [
    { include = "maser", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
spacepy = {version = ">=0.5,<1.0", optional = true}
numpy = ">=1.26,<2"
astropy = "^5.0.4"
xarray = "^2022.3.0"
jupyter = {version = "^1.0.0", optional = true}
jupytext = {version = "^1.13.8", optional = true}

[tool.poetry.extras]
jupyter = ["jupyter", "jupytext"]
spacepy = ["spacepy"]
all = ["jupyter", "jupytext", "spacepy"]

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"
