[tool.poetry]
name = "maser-plot"
version = "0.2.4"
description = "Maser4py submodule to plot radio data"
readme = "README.md"
authors = ["Baptiste Cecconi <baptiste.cecconi@obspm.fr>", "Sonny Lion <sonny.lion@obspm.fr>", "Xavier Bonnin <xavier.bonnin@obspm.fr>"]
license = "CeCILL"

# handle namespace with poetry
packages = [
    { include = "maser" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
