[tool.poetry]
name = "maser-plot"
version = "0.4.0"
description = "Maser4py submodule to plot radio data"
readme = "README.md"
authors = ["MASER team <contact.maser@obspm.fr>"]
license = "CeCILL-B"

# handle namespace with poetry
packages = [
    { include = "maser", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
matplotlib = ">=3.5,<4"

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
