[tool.poetry]
name = "maser-tools"
version = "0.3.0"
description = ""
authors = ["MASER Team"]
license = "CeCILL"

# handle namespace with poetry
packages = [
    { include = "maser", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = ">=1.23,<2.0"
# spacepy = {version = ">=0.5,<1.0", optional = true}
spacepy = ">=0.5,<1.0"
openpyxl = "^3.0.10"
pytz = "^2022.4"
jinja2 = "^3.1.2"

# [tool.poetry.extras]
# spacepy = ["spacepy"]
# all = ["spacepy"]

[build-system]
requires = ["poetry>=1.1.4", "setuptools"]
build-backend = "poetry.core.masonry.api"
